pics no longer stretch in Givers and Testimonials sections. added in quotes and some minor styling adjustments

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -116,4 +116,5 @@
   height: 100%;
   background-color: #BED7C1;
   margin-bottom: 30px;
+  border-radius: 10px;
 }
